--- a/CleanArchMvc.Infra.Data/CleanArchMvc.Infra.Data.csproj
+++ b/CleanArchMvc.Infra.Data/CleanArchMvc.Infra.Data.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <PrivateAssets>none</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,7 +26,6 @@
 
   <ItemGroup>
     <Folder Include="EntitiesConfiguration\" />
-    <Folder Include="Identity\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
